# fastapi-decorators

./: LICENSE  README.md  deploy.sh  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.txt  run_tests.sh  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs-overrides/partials/integrations/analytics/: custom.html
fastapi_decorators/: __init__.py  decorators.py  types.py
src/fastapi_decorators/: __init__.py  decorators.py
tests/: app.py  test_app.py
tests/forwardrefs/: dummy_decorator.py  test_forwardrefs.py
tests/integration_tests/: app.py  test_app.py
tests/unit_tests/: test_decorators.py
