[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-decorators"
version = "1.0.19"
description = "Create decorators for your endpoints using FastAPI dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Anders Brams", email = "anders@brams.dk" }]
keywords = ["fastapi", "decorators", "middleware", "dependency", "dependencies"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["fastapi>=0.70.0"]

[project.urls]
Homepage = "https://github.com/Minibrams/fastapi-decorators"
Documentation = "https://github.com/Minibrams/fastapi-decorators"
Repository = "https://github.com/Minibrams/fastapi-decorators"
Issues = "https://github.com/Minibrams/fastapi-decorators/issues"

[tool.uv]
package = true
dev-dependencies = [
    "httpx>=0.27.2",
    "mypy>=1.14.1",
    "pyright>=1.1.384",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "uvicorn>=0.31.1",
    "mkdocs-material>=9.5.40",
]

[tool.hatch.build.targets.sdist]
packages = ["fastapi_decorators"]
include = ["fastapi_decorators/py.typed"]

[tool.hatch.build.targets.wheel]
packages = ["fastapi_decorators"]
include = ["fastapi_decorators/py.typed"]

[tool.mypy]
strict = true
disallow_untyped_decorators = true
warn_unused_ignores = false

[tool.pyright]
strict = ["fastapi_decorators/*.py", "tests/*.py"]
